--- a/DemoTSSP/ClientApp/package.json
+++ b/DemoTSSP/ClientApp/package.json
@@ -22,6 +22,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "react-vertical-timeline-component": "^3.3.3",
     "reactstrap": "^8.4.1",
     "rimraf": "^2.6.2",
     "styled-components": "^5.3.0"
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@types/react-router": "^5.1.14",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-vertical-timeline-component": "^3.0.0",
     "@types/styled-components": "^5.1.9",
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
